...
                        cont.resume(throwing: AppError.cancelled); return
                    }
                    if let urlErr = error as? URLError {
                        cont.resume(throwing: AppError.network(urlErr)); return
                    }
                    cont.resume(throwing: AppError.unknown(nsErr.localizedDescription))
                    return
                }
                
                // Must be HTTP
                guard let http = response as? HTTPURLResponse else {
                    cont.resume(throwing: AppError.invalidResponse); return
                }
...
